INTYG-2028: Fixar hoppande animeringsstart på fold-animation

--- a/web/src/main/resources/META-INF/resources/webjars/common/css/_common.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/css/_common.scss
@@ -333,6 +333,13 @@ div.infobox {
   height: 0;
 }
 
+.fold-animation {
+  overflow:hidden;
+  &.ng-enter-prepare {
+    height: 0px;
+  }
+}
+
 .slide-fade-animation {
   margin-left: 20px;
   opacity: 1;
