INTYG-2571: Skyddar ifall fraga är undefined. Fix sasspath.

--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/css/inera-webcert.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/css/inera-webcert.scss
@@ -43,7 +43,7 @@
   @import 'wc-vardenhet-selector';
   @import 'wc-header-care-unit-dialog';
   @import 'bootstrap-overrides';
-  @import '../fk/arenden/arenden/_arende';
+  @import '../fk/arenden/_arende';
   @import '../fmb/fmb';
 
   //colors
