INTYG-2645: Hindrar IE från att visa rensaknappar

--- a/web/src/main/resources/META-INF/resources/webjars/common/css/_common.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/css/_common.scss
@@ -547,3 +547,12 @@ input.ng-invalid-date {
     vertical-align: bottom;
   }
 }
+
+/*
+  Disablar rensa-kryss-knappen i IE eftersom de inte skickar en change event som angularjs kan lyssna på.
+
+  En workaround kan vara på gång i AngularJS. Se https://github.com/angular/angular.js/issues/11193
+*/
+::-ms-clear {
+  display: none;
+}
