--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/css/_bootstrap-overrides.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/css/_bootstrap-overrides.scss
@@ -395,3 +395,10 @@ $font-3: sans-serif;
 .glyphicon.glyphicon-chevron-down {
   top: 3px;
 }
+
+/* ---------------------------------------
+ * Popover overrides
+ * --------------------------------------- */
+.popover-content {
+    white-space: pre-wrap;
+}
