--- a/web/src/main/resources/META-INF/resources/webjars/common/css/_qa.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/css/_qa.scss
@@ -143,3 +143,7 @@ QA list item animation
 .qa-panel__vidarebefordra-placement {
   margin-top: -62px;
 }
+
+.komplettera-block {
+  padding-top: 10px;
+}
