--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/css/_bootstrap-overrides.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/css/_bootstrap-overrides.scss
@@ -211,7 +211,7 @@ $font-3: sans-serif;
  * --------------------------------------- */
 .tooltip {
   text-align: left;
-  z-index: 600;
+  z-index: 2000;
   font-weight: normal;
   white-space: normal;
   &.in {
@@ -226,11 +226,23 @@ $font-3: sans-serif;
 }
 
 /* ---------------------------------------
+ * Tooltip overrides
+ * --------------------------------------- */
+
+.popover {
+  z-index: 2000;
+}
+
+/* ---------------------------------------
  * Alert overrides
  * --------------------------------------- */
 .alert {
   padding-right: 22px;
   max-width: 600px;
+}
+
+.alert-bottom {
+  margin: 10px 0 0 0;
 }
 
 .alert-warning {
@@ -394,11 +406,4 @@ $font-3: sans-serif;
 
 .glyphicon.glyphicon-chevron-down {
   top: 3px;
-}
-
-/* ---------------------------------------
- * Popover overrides
- * --------------------------------------- */
-.popover-content {
-    white-space: pre-wrap;
 }
