--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/css/inera-webcert.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/css/inera-webcert.scss
@@ -48,6 +48,7 @@
   @import '../fk/arenden/_arende';
   @import '../fmb/fmb';
   @import '../gui/formly/diagnos';
+  @import 'komplettering-dialog';
 
   //colors
   $color_java_approx: #28b4c4;
