INTYG-2684: Lagt till wcTableHead direktiv som möjliggör uib-popover-html tooltips på th element som ersätter title attribut för tooltips

--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/css/inera-webcert.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/css/inera-webcert.scss
@@ -42,6 +42,7 @@
   @import 'wc-header';
   @import 'wc-vardenhet-selector';
   @import 'wc-header-care-unit-dialog';
+  @import 'wc-table-head';
   @import 'bootstrap-overrides';
   @import '../fk/arenden/_arende';
   @import '../fmb/fmb';
