INTYG-2485: Skapat fk-sit-common.scss för att samla sit specifika (men gemensamma) style rules

--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/css/inera-webcert.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/css/inera-webcert.scss
@@ -44,6 +44,7 @@
   @import 'wc-header-care-unit-dialog';
   @import 'wc-table-head';
   @import 'bootstrap-overrides';
+  @import 'fk-sit-common';
   @import '../fk/arenden/_arende';
   @import '../fmb/fmb';
 
