--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/css/inera-webcert.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/css/inera-webcert.scss
@@ -216,7 +216,6 @@
 
   .utkast-footer {
     margin-bottom: 50px;
-    margin-left: 15px;
   }
 
   p {
@@ -945,15 +944,17 @@ wc cookie banner css.
   border: 1px solid #9cd7e3;
   border-radius: 4px;
   padding: 10px;
+
+  .currentlyviewing {
+    padding-left: 7px;
+  }
   table {
     display: table;
     margin: 0;
     td {
-      height: 39px;
-      padding: 0px 10px;
+      height: 36px;
     }
     th {
-      padding: 0px 10px;
     }
   }
 }
