--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/css/inera-webcert.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/css/inera-webcert.scss
@@ -485,6 +485,18 @@
     box-shadow: inset 0 1px 1px $black_075,0 0 8px $red_60;
     border-color: $blaze_orange;
   }
+  
+  /* Used in wcDatePickerField.directive.html */
+  .text-invalid, INPUT.ng-invalid-min-date {
+    box-shadow: inset 0 1px 1px $black_075,0 0 8px $red_60;
+    border-color: $blaze_orange;
+  }
+  
+  /* Used in wcDatePickerField.directive.html */
+  .text-invalid, INPUT.ng-invalid-max-date {
+    box-shadow: inset 0 1px 1px $black_075,0 0 8px $red_60;
+    border-color: $blaze_orange;
+  }
 
   /* Not used?? */
   .error-icon {
