--- a/web/src/main/resources/META-INF/resources/webjars/common/css/_utkast-header.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/css/_utkast-header.scss
@@ -99,7 +99,7 @@ $header-fix-panel-background-color: #fff;
   }
 }
 
-.cert-error-panel {
+.intyg-error-panel {
   margin-top: 100px;
   max-width: 800px;
   .alert-danger {
