--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/css/print.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/css/print.scss
@@ -91,11 +91,11 @@ $font-2: 'sans-serif';
     }
   }
 
-  #cert-otherData-rehabWhen-date-toggle {
+  #intyg-otherData-rehabWhen-date-toggle {
     display: none;
   }
 
-  .cert-field-number {
+  .intyg-field-number {
     font-size: 14px;
     padding-top: 20px;
   }
