INTYG-2806: Implementerade nya flödet för makulera. Ej makulera och ersätt än.

--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/css/_bootstrap-overrides.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/css/_bootstrap-overrides.scss
@@ -29,6 +29,8 @@ $btn-link-hover-color: #31b2be;
 $btn-inverse-color: #fff;
 $btn-inverse-background-color: #3f3f3f;
 $btn-inverse-background-focus-and-hover-color: #656565;
+$btn-danger-color: #ac2925;
+$btn-danger-color-hover: #c12e2a;
 $alert-warning-color: #8a6d3b;
 $alert-danger-color: #a94442;
 $alert-info-color: #306e8d;
@@ -86,10 +88,22 @@ $font-3: sans-serif;
   white-space: nowrap;
 }
 
-%btn-info-common {
-  padding: 7px 15px;
+%btn-common {
   font-weight: bold;
   background: none;
+  border: none;
+}
+
+.btn-danger {
+  @extend %btn-common;
+  background-color: $btn-danger-color;
+  &:hover {
+    background-color: $btn-danger-color-hover;
+  }
+}
+
+%btn-info-common {
+  @extend %btn-common;
   background-color: $btn-info-common-background-color;
 }
 
@@ -174,7 +188,7 @@ $font-3: sans-serif;
  * --------------------------------------- */
 .modal-footer {
   text-align: left;
-  .btn-info {
+  .btn-info, .btn-danger, btn-success {
     padding: 7px 15px;
   }
 }
