INTYG-2807: Specificera hur 5-, 4- och 3-ställiga koder ska hanteras i intygen

--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/fmb/_fmb.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/fmb/_fmb.scss
@@ -56,6 +56,11 @@ $fmb-glyphicon-hover-color: #808080;
   }
 }
 
+.panel-wrapper-fmb {
+  position:relative;
+  padding:10px;
+}
+
 .panel-fmb-info {
   border-color: $fmb-border-color;
 
