INTYG-2711: Flyttat in wcIntegrationEnhetSelector till common

--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/css/inera-webcert.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/css/inera-webcert.scss
@@ -49,6 +49,7 @@
   @import '../fmb/fmb';
   @import '../gui/formly/diagnos';
   @import 'komplettering-dialog';
+  @import '../gui/wcIntegrationEnhetSelector/wcIntegrationEnhetSelector.directive';
 
   //colors
   $color_java_approx: #28b4c4;
@@ -942,4 +943,14 @@ wc cookie banner css.
     th {
     }
   }
+}
+
+/*
+Integration enhetsval page. This is rendered in the content view, but we want it to span the entire page.
+*/
+.integration-enhetsval-page {
+  background-color: #28b4c4;
+  position: absolute;
+  width: 100%;
+  height: 100%;
 }
