INTYG-2896: finjusteringar kompletteringsdialogen

--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/css/_bootstrap-overrides.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/css/_bootstrap-overrides.scss
@@ -87,6 +87,7 @@ $font-3: sans-serif;
 }
 
 %btn-info-common {
+  padding: 7px 15px;
   font-weight: bold;
   background: none;
   background-color: $btn-info-common-background-color;
