--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/css/_bootstrap-overrides.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/css/_bootstrap-overrides.scss
@@ -422,3 +422,14 @@ $font-3: sans-serif;
 .glyphicon.glyphicon-chevron-down {
   top: 3px;
 }
+
+/* ---------------------------------------
+ * Popover overrides
+ * --------------------------------------- */
+.popover-content {
+    white-space: pre-wrap;
+}
+
+.popover {
+  z-index: 2000; /* must be higher than modal z-index (currently 1050+index*10) to allow tooltips on modals */
+}
