--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/css/inera-webcert.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/css/inera-webcert.scss
@@ -133,8 +133,18 @@
     }
   }
 
-  h1 {
+  .page-title, .h1 {
     font-weight: bold;
+    margin: 0;
+    padding-bottom: 10px;
+    font-size: 24px;
+    color: $color_blue_chill_approx;
+
+    &.backlink-heading {
+      display: inline-block;
+      margin-right: 20px;
+      line-height: 29px;
+    }
   }
 
   h2 {
@@ -154,10 +164,6 @@
   }
 
   h6 {
-    font-weight: bold;
-  }
-
-  .h1 {
     font-weight: bold;
   }
 
@@ -246,18 +252,6 @@
     }
     h3 {
       color: $color_java_approx;
-    }
-  }
-
-  h1 {
-    margin: 0;
-    padding-bottom: 10px;
-    font-size: 24px;
-    color: $color_blue_chill_approx;
-    &.backlink-heading {
-      display: inline-block;
-      margin-right: 20px;
-      line-height: 29px;
     }
   }
 
