--- a/web/src/main/resources/META-INF/resources/webjars/common/css/_common.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/css/_common.scss
@@ -27,6 +27,8 @@ $color_java_approx: #28b4c4;
 $color_tapa_approx: #777;
 $color_silver_chalice_approx: #aaaaaa;
 $mercury: #e5e5e5;
+$intyg_medium_grey: #D4D4D4;
+$intyg_light_grey: #fafafa;
 $color_wild_sand_approx: #f5f5f5;
 $color_iron_approx: #d8d8d8;
 $color_suva_gray_approx: #888;
@@ -171,22 +173,27 @@ a {
   -moz-border-radius: 6px 6px 6px 6px;
   border-radius: 6px 6px 6px 6px;
 
+  font-size: 13px;
+
   input[wc-maxlength] {
     margin: 0;
   }
   h4 {
-    font-size: 14px;
-    padding-bottom: 10px;
+    font-size: 16px;
+    padding-bottom: 20px;
     &.intyg-field-number {
       float: right;
       padding: 0 0 0 10px;
       color: $color_blue_chill_approx;
       font-size: 15px;
     }
+    &.noH5 {
+      padding-bottom: 10px;
+    }
   }
 
   h5 {
-    font-size: 13px;
+    font-size: 14px;
     padding-bottom: 10px;
   }
 
@@ -210,7 +217,7 @@ a {
   &__heading {
     margin: 0;
     color: $color_blue_chill_approx;
-    font-size: 18px;
+    font-size: 16px;
     font-weight: bold;
     padding-bottom: 0px;
     -webkit-border-radius: 4px 4px 4px 4px;
@@ -237,11 +244,11 @@ a {
   }
   &__content {
     display: block;
-    padding: 15px 20px 15px 20px;
+    padding: 20px;
     background-color: $mercury;
-    -webkit-border-radius: 4px 4px 4px 4px;
-    -moz-border-radius: 4px 4px 4px 4px;
-    border-radius: 4px 4px 4px 4px;
+    -webkit-border-radius: 7px 7px 7px 7px;
+    -moz-border-radius: 7px 7px 7px 7px;
+    border-radius: 7px 7px 7px 7px;
     .divider {
       border-bottom: 1px solid $color_mountain_mist_approx;
     }
@@ -250,11 +257,29 @@ a {
       border: 2px solid $mercury;
     }
   }
+  &__subcontent {
+    border: 1px solid $intyg_medium_grey;
+    background-color: $intyg_light_grey;
+    -webkit-border-radius: 7px 7px 7px 7px;
+    -moz-border-radius: 7px 7px 7px 7px;
+    border-radius: 7px 7px 7px 7px;
+    margin-bottom: 16px;
+    &:last-child{
+      margin-bottom: 0;
+    }
+    padding: 20px;
+  }
   .unfilled {
     color: $color_suva_gray_approx;
     -webkit-border-radius: 4px 4px 4px 4px;
     -moz-border-radius: 4px 4px 4px 4px;
     border-radius: 4px 4px 4px 4px;
+  }
+  hr {
+    border-top:1px solid #B2B2B2;
+    border-bottom: 1px solid #FFFFFF;
+    margin-left: -20px;
+    margin-right: -20px;
   }
 }
 
@@ -535,7 +560,10 @@ input.ng-invalid-date {
 }
 
 .intyg-field {
-  margin-bottom: 10px;
+  margin-bottom: 20px;
+  &:last-child{
+    margin-bottom: 0;
+  }
 }
 
 .intyg-field label {
