--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/css/inera-webcert.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/css/inera-webcert.scss
@@ -48,6 +48,7 @@
   @import '../fk/arenden/_arende';
   @import '../fmb/fmb';
   @import '../gui/formly/diagnos';
+  @import '../gui/formly/underlag';
   @import 'komplettering-dialog';
   @import '../gui/wcIntegrationEnhetSelector/wcIntegrationEnhetSelector.directive';
 
