INTYG-3043: Fixat ryckig animering för textrutorna vid makulera intyg.

--- a/web/src/main/resources/META-INF/resources/webjars/common/css/_common.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/css/_common.scss
@@ -352,7 +352,8 @@ div.infobox {
 
 .fold-slide-fade-animation-hidden {
   overflow: hidden;
-  margin-left: 0px;
+  padding: 0;
+  margin-left: 0;
   opacity: 0;
   height: 0;
 }
