--- a/web/src/main/resources/META-INF/resources/webjars/common/css/_common.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/css/_common.scss
@@ -17,6 +17,7 @@
  * along with this program.  If not, see <http://www.gnu.org/licenses/>.
  */
 
+
 /* All common inera-certificate css rules are placed here */
 
 //colors
@@ -33,520 +34,613 @@ $color_suva_gray_approx: #888;
 $color_apple_blossom_approx: #a94442;
 $gray: grey;
 $color_eastern_blue_approx: #24a1af;
-
 //urls
 $url_0: url(/img/tillbaka.png);
 $url_1: url(/img/tillbaka_hoover.png);
 
 /* Commonly used */
+
 a {
-  &.backlink-icon {
-    display: block;
-    width: 24px;
-    height: 24px;
-    background: transparent $url_0 center left no-repeat;
-    float: left;
-    margin: 2px 20px 0 0;
-  }
-  &:hover.backlink-icon {
-    background: transparent $url_1 center left no-repeat;
-  }
+    &.backlink-icon {
+        display: block;
+        width: 24px;
+        height: 24px;
+        background: transparent $url_0 center left no-repeat;
+        float: left;
+        margin: 2px 20px 0 0;
+    }
+    &:hover.backlink-icon {
+        background: transparent $url_1 center left no-repeat;
+    }
 }
+
 
 /* Generally applicable helper classes*/
+
+
 /* Only used in fk7263. Move it there. */
+
 .bottom-padding-small {
-  padding-bottom: 5px;
+    padding-bottom: 5px;
 }
 
+
 /* Only used in fk7263. Move it there. */
+
 .bottom-padding-tiny {
-  padding-bottom: 2px;
+    padding-bottom: 2px;
 }
 
+
 /* Only used in fk7263. Move it there. */
+
 .pad10 {
-  padding: 10px;
+    padding: 10px;
 }
 
+
 /* Only used in fk7263. Move it there. */
+
 .bold {
-  font-weight: bold !important;
+    font-weight: bold !important;
 }
+
 
 /* End helper classes */
 
+
 /* Only used in fk7263, move it ther */
+
 .counter {
-  font-style: italic;
-  font-size: 11px;
+    font-style: italic;
+    font-size: 11px;
 }
 
+
 /* Only used in fk7263, move it ther */
+
 .info-transfer {
-  font-size: 12px;
-  color: $color_tapa_approx;
+    font-size: 12px;
+    color: $color_tapa_approx;
 }
 
+
 /* Only used in fk7263, move it ther */
+
 .banner-margin {
-  margin-top: 60px;
-  max-width: 800px;
+    margin-top: 60px;
+    max-width: 800px;
 }
+
 
 /* Commonly used for all intygsmodules */
+
 .edit-form {
-  max-width: 800px;
+    max-width: 800px;
 }
 
+
 /* Commonly used */
+
 .collapsed {
-  margin-top: 150px;
+    margin-top: 150px;
 }
 
+
 /* Commonly used */
+
 .certificate {
-  max-width: 800px;
+    max-width: 800px;
 }
+
 
 /* Modifier of certificate. Only used in fk7263 right now. A larger width certificate*/
+
 .certificate--lg {
-  max-width: 1600px;
+    max-width: 1600px;
 }
 
+
 /* Commonly used */
+
 .revoked-certificate {
-  color: $color_silver_chalice_approx;
-  .qa-block {
-    background-color: $color_wild_sand_approx;
     color: $color_silver_chalice_approx;
-  }
-  .qa-block-head {
-    background-color: $color_wild_sand_approx;
-    color: $color_silver_chalice_approx;
-  }
-  div.infobox {
-    background-color: $mercury;
-    color: $color_silver_chalice_approx;
-    h3 {
-      background-color: $mercury;
-      color: $color_silver_chalice_approx;
+    .qa-block {
+        background-color: $color_wild_sand_approx;
+        color: $color_silver_chalice_approx;
     }
-    h4 {
-      background-color: $mercury;
-      color: $color_silver_chalice_approx;
+    .qa-block-head {
+        background-color: $color_wild_sand_approx;
+        color: $color_silver_chalice_approx;
     }
-  }
-  .intyg-body .intyg-block .title {
-    color: $color_silver_chalice_approx;
-  }
-  .intyg-block h4.intyg-field-number {
-    color: $color_silver_chalice_approx;
-  }
+    div.infobox {
+        background-color: $mercury;
+        color: $color_silver_chalice_approx;
+        h3 {
+            background-color: $mercury;
+            color: $color_silver_chalice_approx;
+        }
+        h4 {
+            background-color: $mercury;
+            color: $color_silver_chalice_approx;
+        }
+    }
+    .intyg-body .intyg-block .title {
+        color: $color_silver_chalice_approx;
+    }
+    .intyg-block h4.intyg-field-number {
+        color: $color_silver_chalice_approx;
+    }
 }
+
 
 /* Used by webcert. Leave here for now */
+
 .webcert-multicol .certificate {
-  max-width: 600px;
+    max-width: 600px;
 }
+
 
 /* Commonly used */
-.intyg-body {
 
-  .alert-info {
-    margin: 0 20px 20px 0;
-  }
+.intyg-body {
+    .alert-info {
+        margin: 0 20px 20px 0;
+    }
 }
 
+
 /* Common for intygstyper */
+
 .intyg-block-single {
-  padding-left: 20px;
-  background-color: $mercury;
-  border: 1px solid $color_iron_approx;
+    padding-left: 20px;
+    background-color: $mercury;
+    border: 1px solid $color_iron_approx;
 }
 
 .intyg-block {
-  margin: 0 30px 40px 0;
-  -webkit-border-radius: 6px 6px 6px 6px;
-  -moz-border-radius: 6px 6px 6px 6px;
-  border-radius: 6px 6px 6px 6px;
-
-  input[wc-maxlength] {
-    margin: 0;
-  }
-  h4 {
-    font-size: 14px;
-    padding-bottom: 10px;
-    &.intyg-field-number {
-      float: right;
-      padding: 0 0 0 10px;
-      color: $color_blue_chill_approx;
-      font-size: 15px;
+    margin: 0 30px 40px 0;
+    -webkit-border-radius: 6px 6px 6px 6px;
+    -moz-border-radius: 6px 6px 6px 6px;
+    border-radius: 6px 6px 6px 6px;
+    input[wc-maxlength] {
+        margin: 0;
     }
-  }
-
-  h5 {
-    font-size: 13px;
-    padding-bottom: 10px;
-  }
-
-  a {
-    color: $color_blue_chill_approx;
-  }
-  label {
-    max-width: 600px;
-    vertical-align: baseline;
-    font-weight: normal;
-  }
-  .checkbox {
-    padding-left: 20px;
-  }
-  .checkbox-columns {
-    margin-left: 0;
-  }
-  .intyg-field-blank {
-    color: $color_blue_chill_approx;
-  }
-  &__heading {
-    margin: 0;
-    color: $color_blue_chill_approx;
-    font-size: 18px;
-    font-weight: bold;
-    padding-bottom: 0px;
-    -webkit-border-radius: 4px 4px 4px 4px;
-    -moz-border-radius: 4px 4px 4px 4px;
-    border-radius: 4px 4px 4px 4px;
-    position: relative;
-    display: inline;
-    vertical-align: sub;
-  }
-  &__titlerow {
-    padding-bottom: 10px;
-  }
-  .title-single {
-    background: none;
-    -webkit-border-radius: 0 0 0 0;
-    -moz-border-radius: 0 0 0 0;
-    border-radius: 0 0 0 0;
-    border: 0;
-    display: inline-block;
-    padding: 10px 10px;
-    vertical-align: middle;
-    margin: 0;
-    cursor: pointer;
-  }
-  &__content {
-    display: block;
-    padding: 15px 20px 15px 20px;
-    background-color: $mercury;
-    -webkit-border-radius: 4px 4px 4px 4px;
-    -moz-border-radius: 4px 4px 4px 4px;
-    border-radius: 4px 4px 4px 4px;
-    .divider {
-      border-bottom: 1px solid $color_mountain_mist_approx;
+    h4 {
+        font-size: 14px;
+        padding-bottom: 10px;
+        &.intyg-field-number {
+            float: right;
+            padding: 0 0 0 10px;
+            color: $color_blue_chill_approx;
+            font-size: 15px;
+        }
     }
-    &.unfilled {
-      background-color: $white;
-      border: 2px solid $mercury;
+    h5 {
+        font-size: 13px;
+        padding-bottom: 10px;
     }
-  }
-  .unfilled {
-    color: $color_suva_gray_approx;
-    -webkit-border-radius: 4px 4px 4px 4px;
-    -moz-border-radius: 4px 4px 4px 4px;
-    border-radius: 4px 4px 4px 4px;
-  }
+    a {
+        color: $color_blue_chill_approx;
+    }
+    label {
+        max-width: 600px;
+        vertical-align: baseline;
+        font-weight: normal;
+    }
+    .checkbox {
+        padding-left: 20px;
+    }
+    .checkbox-columns {
+        margin-left: 0;
+    }
+    .intyg-field-blank {
+        color: $color_blue_chill_approx;
+    }
+    &__heading {
+        margin: 0;
+        color: $color_blue_chill_approx;
+        font-size: 18px;
+        font-weight: bold;
+        padding-bottom: 0px;
+        -webkit-border-radius: 4px 4px 4px 4px;
+        -moz-border-radius: 4px 4px 4px 4px;
+        border-radius: 4px 4px 4px 4px;
+        position: relative;
+        display: inline;
+        vertical-align: sub;
+    }
+    &__titlerow {
+        padding-bottom: 10px;
+    }
+    .title-single {
+        background: none;
+        -webkit-border-radius: 0 0 0 0;
+        -moz-border-radius: 0 0 0 0;
+        border-radius: 0 0 0 0;
+        border: 0;
+        display: inline-block;
+        padding: 10px 10px;
+        vertical-align: middle;
+        margin: 0;
+        cursor: pointer;
+    }
+    &__content {
+        display: block;
+        padding: 15px 20px 15px 20px;
+        background-color: $mercury;
+        -webkit-border-radius: 4px 4px 4px 4px;
+        -moz-border-radius: 4px 4px 4px 4px;
+        border-radius: 4px 4px 4px 4px;
+        .divider {
+            border-bottom: 1px solid $color_mountain_mist_approx;
+        }
+        &.unfilled {
+            background-color: $white;
+            border: 2px solid $mercury;
+        }
+    }
+    .unfilled {
+        color: $color_suva_gray_approx;
+        -webkit-border-radius: 4px 4px 4px 4px;
+        -moz-border-radius: 4px 4px 4px 4px;
+        border-radius: 4px 4px 4px 4px;
+    }
 }
+
 
 /* Only used in fk7263. Lets move it there */
+
 ul.padded-list {
-  padding-left: 16px;
-  > li {
-    padding-bottom: 5px;
-  }
+    padding-left: 16px;
+    >li {
+        padding-bottom: 5px;
+    }
 }
+
 
 /* Unused. Remove */
+
 .intyg-block-single h4.intyg-field-number {
-  padding: 10px 20px 0 20px;
+    padding: 10px 20px 0 20px;
 }
 
+
 /* Commonly used */
+
 .indent {
-  padding-left: 20px !important;
+    padding-left: 20px !important;
 }
+
 
 /* Only used in fk7263. Move it there */
+
 .block {
-  display: block !important;
+    display: block !important;
 }
 
+
 /* Commonly used */
+
 .inline-block {
-  display: inline-block !important;
-  vertical-align: middle;
+    display: inline-block !important;
+    vertical-align: middle;
 }
 
+
 /* Commonly used */
+
 .maxwidth {
-  max-width: 100% !important;
-  width: 100% !important;
+    max-width: 100% !important;
+    width: 100% !important;
 }
 
+
 /* Commonly used */
+
 div.infobox {
-  background-color: $color_blue_chill_approx;
-  -webkit-border-radius: 4px 4px 4px 4px;
-  -moz-border-radius: 4px 4px 4px 4px;
-  border-radius: 4px 4px 4px 4px;
-  color: $white;
-  padding: 20px;
-  margin-right: 30px;
-  h3 {
-    font-size: 16px;
-    padding: 0;
+    background-color: $color_blue_chill_approx;
+    -webkit-border-radius: 4px 4px 4px 4px;
+    -moz-border-radius: 4px 4px 4px 4px;
+    border-radius: 4px 4px 4px 4px;
     color: $white;
-  }
-  h4 {
-    padding: 10px 0 5px 0;
-    color: $white;
-    font-size: 14px;
-    font-weight: bold;
-  }
+    padding: 20px;
+    margin-right: 30px;
+    h3 {
+        font-size: 16px;
+        padding: 0;
+        color: $white;
+    }
+    h4 {
+        padding: 10px 0 5px 0;
+        color: $white;
+        font-size: 14px;
+        font-weight: bold;
+    }
 }
+
 
 /* ------------------------------------- */
+
+
 /* ng-animate animations */
+
+
 /* ------------------------------------- */
 
 .fold-slide-fade-animation {
-  overflow: hidden;
-  margin-left: 0px;
-  opacity: 1;
+    overflow: hidden;
+    margin-left: 0px;
+    opacity: 1;
 }
 
 .fold-slide-fade-animation-hidden {
-  overflow: hidden;
-  margin-left: -5px;
-  opacity: 0;
-  height: 0;
+    overflow: hidden;
+    margin-left: -5px;
+    opacity: 0;
+    height: 0;
 }
 
 .fold-animation {
-  overflow:hidden;
-  &.ng-enter-prepare {
-    height: 0px;
-  }
+    overflow: hidden;
+    &.ng-enter-prepare {
+        height: 0px;
+    }
 }
 
 .slide-fade-animation {
-  margin-left: 0px;
-  opacity: 1;
+    margin-left: 0px;
+    opacity: 1;
 }
 
 .slide-fade-animation-hidden {
-  margin-left: -5px;
-  opacity: 0;
+    margin-left: -5px;
+    opacity: 0;
 }
+
 
 /* Intyg-edit menu header collapse animation */
+
 %transition-with-ease-out {
-  -webkit-transition: all ease-out 0.5s;
-  -moz-transition: all ease-out 0.5s;
-  -o-transition: all ease-out 0.5s;
-  transition: all ease-out 0.5s;
-  position: relative;
+    -webkit-transition: all ease-out 0.5s;
+    -moz-transition: all ease-out 0.5s;
+    -o-transition: all ease-out 0.5s;
+    transition: all ease-out 0.5s;
+    position: relative;
 }
+
 
 /* Only used in fk7263. Move it there. */
+
+
 /*Fade out fields not desired when smittskydd is checked */
+
 .field-fade {
-  opacity: 1;
-  left: 0;
-  @extend %transition-with-ease-out;
-  &.ng-hide-add {
-    display: block !important;
+    opacity: 1;
+    left: 0;
     @extend %transition-with-ease-out;
-  }
-  &.ng-hide {
-    opacity: 0;
-    left: -10px;
-  }
+    &.ng-hide-add {
+        display: block !important;
+        @extend %transition-with-ease-out;
+    }
+    &.ng-hide {
+        opacity: 0;
+        left: -10px;
+    }
 }
+
 
 /* Used in common wcModal.window.html only */
+
 .fade.ng-hide-remove {
-  display: block !important;
-  @extend %transition-with-ease-out;
+    display: block !important;
+    @extend %transition-with-ease-out;
 }
 
+
 /* Commonly used */
+
 .radio {
-  cursor: pointer;
+    cursor: pointer;
 }
 
+
 /* Commonly used */
+
 .checkbox {
-  cursor: pointer;
+    cursor: pointer;
 }
 
+
 /* Commonly used */
+
 label {
-  &.checkbox {
-    font-weight: normal;
-    margin-top: 0;
-    + label.checkbox {
-      font-weight: normal;
-      margin-top: 0;
+    &.checkbox {
+        font-weight: normal;
+        margin-top: 0;
+        +label.checkbox {
+            font-weight: normal;
+            margin-top: 0;
+        }
     }
-  }
-  &.radio {
-    font-weight: normal;
-    margin-top: 0;
-    + label.radio {
-      font-weight: normal;
-      margin-top: 0;
+    &.radio {
+        font-weight: normal;
+        margin-top: 0;
+        +label.radio {
+            font-weight: normal;
+            margin-top: 0;
+        }
     }
-  }
 }
+
 
 /* These two must match to keep distance. use big-radio-label for wrapping label and big-radio on the input radio */
+
 .big-radio-label input[type=radio].big-radio {
-  margin-left: -25px;
+    margin-left: -25px;
 }
+
 .big-radio-label {
-  padding-left: 25px;
+    padding-left: 25px;
 }
 
-/* Commonly used */
-.edit-form {
-  .alert-danger {
-    border: 1px solid $color_apple_blossom_approx;
-  }
-  .form-inline input[type=checkbox] {
-    margin: -1px 0 0;
-    vertical-align: middle;
-  }
+
+/* These two must match to keep distance. use big-radio-label for wrapping label and big-radio on the input radio */
+
+.big-checkbox-label input[type=radio].big-checkbox {
+    margin-left: -25px;
 }
 
-/* Commonly used */
-.edit-form {
-  h4 {
-    font-size: 14px;
-  }
-  .intyg-block .checkbox input[type=checkbox] {
-    margin-left: -20px;
-  }
+.big-checkbox-label {
+    padding-left: 25px;
 }
+
+
+/* Commonly used */
+
+.edit-form {
+    .alert-danger {
+        border: 1px solid $color_apple_blossom_approx;
+    }
+    .form-inline input[type=checkbox] {
+        margin: -1px 0 0;
+        vertical-align: middle;
+    }
+}
+
+
+/* Commonly used */
+
+.edit-form {
+    h4 {
+        font-size: 14px;
+    }
+    .intyg-block .checkbox input[type=checkbox] {
+        margin-left: -20px;
+    }
+}
+
 
 /* Only used in wcField.directive.html */
+
 .fielderror {
-  border: 2px solid $color_apple_blossom_approx;
+    border: 2px solid $color_apple_blossom_approx;
 }
 
+
 /* Common for ts-bas and ts-diabetes */
+
 .intyg-answer {
-  font-weight: bold;
-  white-space: pre-line;
+    font-weight: bold;
+    white-space: pre-line;
 }
 
+
 /* Common for ts-bas and ts-diabetes */
+
 input[type=text].small-decimal {
-  width: 38px;
+    width: 38px;
 }
+
 
 /*Override of bootstrap navbar styling */
+
 %navbar-background {
-  background: $color_eastern_blue_approx !important;
-  color: $white !important;
-  -ms-filter: "progid:DXImageTransform.Microsoft.gradient(enabled=false)" !important;
-  filter: none;
+    background: $color_eastern_blue_approx !important;
+    color: $white !important;
+    -ms-filter: "progid:DXImageTransform.Microsoft.gradient(enabled=false)" !important;
+    filter: none;
 }
 
 .navbar-default .navbar-nav {
-  > .active > a {
-    @extend %navbar-background;
-    &:hover {
-      @extend %navbar-background;
+    >.active>a {
+        @extend %navbar-background;
+        &:hover {
+            @extend %navbar-background;
+        }
+        &:focus {
+            @extend %navbar-background;
+        }
     }
-    &:focus {
-      @extend %navbar-background;
+    >li>a {
+        &:hover {
+            @extend %navbar-background;
+        }
+        &:focus {
+            @extend %navbar-background;
+        }
     }
-  }
-  > li > a {
-    &:hover {
-      @extend %navbar-background;
-    }
-    &:focus {
-      @extend %navbar-background;
-    }
-  }
 }
 
 .disabled {
-  color: $gray;
-  cursor: not-allowed;
+    color: $gray;
+    cursor: not-allowed;
 }
 
 .no-space-left {
-  margin-left: 0;
-  padding-left: 0;
+    margin-left: 0;
+    padding-left: 0;
 }
 
 .diagnos-question-divider {
-  border-top: 1px solid #ccc;
-  margin-top: 15px;
-  padding-top: 15px;
+    border-top: 1px solid #ccc;
+    margin-top: 15px;
+    padding-top: 15px;
 }
 
-.funktionsnedsattning, .behandling {
-  padding-bottom: 20px;
+.funktionsnedsattning,
+.behandling {
+    padding-bottom: 20px;
 }
 
 .question-divider {
-  border-top: 1px solid #ccc;
-  padding-top: 15px;
+    border-top: 1px solid #ccc;
+    padding-top: 15px;
 }
 
 input.ng-invalid-date {
-  box-shadow: inset 0 1px 1px rgba(0, 0, 0, .075), 0 0 8px rgba(255, 0, 0, 0.6);
-  border-color: #ff6600;
+    box-shadow: inset 0 1px 1px rgba(0, 0, 0, .075), 0 0 8px rgba(255, 0, 0, 0.6);
+    border-color: #ff6600;
 }
 
 .not-entered {
-  font-style: italic;
+    font-style: italic;
 }
 
 .intyg-field {
-  margin-bottom: 10px;
+    margin-bottom: 10px;
 }
 
 .intyg-field label {
-  margin-bottom: 0px;
-  font-weight: bold;
+    margin-bottom: 0px;
+    font-weight: bold;
 }
 
 @media screen and (min-width: 768px) {
-  .form-inline .radio input[type=radio], .form-inline .checkbox input[type=checkbox] {
-    vertical-align: middle;
-  }
+    .form-inline .radio input[type=radio],
+    .form-inline .checkbox input[type=checkbox] {
+        vertical-align: middle;
+    }
 }
 
 @media (min-width: 768px) {
-  .form-inline .radio input[type=radio] .big-radio, .form-inline .checkbox input[type=checkbox] .big-checkbox {
-    vertical-align: bottom;
-  }
+    .form-inline .radio input[type=radio] .big-radio,
+    .form-inline .checkbox input[type=checkbox] .big-checkbox {
+        vertical-align: bottom;
+    }
 }
+
 
 /*
   Disablar rensa-kryss-knappen i IE eftersom de inte skickar en change event som angularjs kan lyssna på.
 
   En workaround kan vara på gång i AngularJS. Se https://github.com/angular/angular.js/issues/11193
 */
+
 ::-ms-clear {
-  display: none;
+    display: none;
 }
 
 .keep-newlines {
-  white-space: pre-line;
+    white-space: pre-line;
 }
