--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/css/inera-webcert.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/css/inera-webcert.scss
@@ -456,6 +456,19 @@
       margin-top: 20px;
     }
   }
+  /* Used in patient-address-updater.formly.html */
+  .wc-utkast-patient-address-updater {
+
+    .patient-address-updater-label {
+      color: $color_storm_dust_approx-2;
+      padding-left: 5px;
+    }
+    .alert {
+      margin:5px 0 0 0;
+    }
+  }
+
+
 
   /**Form/validation**/
   %validation-box-shadow {
