--- a/web/src/main/resources/META-INF/resources/webjars/common/css/_common.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/css/_common.scss
@@ -518,6 +518,7 @@ label {
 .edit-form {
     h4 {
         font-size: 14px;
+        line-height: 20px;
     }
     .intyg-block .checkbox input[type=checkbox] {
         margin-left: -20px;
@@ -527,26 +528,20 @@ label {
 
 /* These two must match to keep distance. use big-radio-label for wrapping label and big-radio on the input radio */
 
-label.big-radio-label input[type=radio].big-radio {
+label.big-radio-label input[type=radio].big-radio, label.big-checkbox-label input[type=checkbox].big-checkbox {
     margin-left: -25px;
+    margin-top: -1px;
 }
 
-label.big-radio-label {
+label.big-radio-label, label.big-checkbox-label {
     padding-left: 25px;
+    line-height: 22px;
 }
-
-
-/* These two must match to keep distance. use big-radio-label for wrapping label and big-radio on the input radio */
-
-label.big-checkbox-label input[type=checkbox].big-checkbox {
-    margin-left: -25px;
+/*
+.form-horizontal label.big-checkbox-label, .form-horizontal label.big-radio-label {
+    padding-top: 2px;
 }
-
-label.big-checkbox-label {
-    padding-left: 25px;
-}
-
-
+*/
 /* Only used in wcField.directive.html */
 
 .fielderror {
