--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/css/_bootstrap-overrides.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/css/_bootstrap-overrides.scss
@@ -22,6 +22,7 @@
 $btn-secondary-background-color: #f0f0f0;
 $btn-secondary-background-hover-color: #f6f6f6;
 $btn-success-background-color: #42a341;
+$btn-success-hover-background-color: #52b351;
 $btn-info-common-background-color: #28b4c4;
 $btn-info-hover-background-color: #38c4d4;
 $btn-link-color: #008391;
@@ -87,6 +88,15 @@ $font-3: sans-serif;
   background-color: $btn-success-background-color;
   cursor: pointer;
   white-space: nowrap;
+  border: none;
+
+  &:hover, &:focus, &:active, &.active {
+    background-color: $btn-success-hover-background-color;
+  }
+}
+
+.open .dropdown-toggle.btn-success {
+    background-color: $btn-success-hover-background-color;
 }
 
 %btn-common {
@@ -110,9 +120,13 @@ $font-3: sans-serif;
 
 .btn-info {
   @extend %btn-info-common;
-  &:hover {
+  &:hover, &:focus, &:active, &.active {
     background-color: $btn-info-hover-background-color;
   }
+}
+
+.open .dropdown-toggle.btn-info {
+  background-color: $btn-info-hover-background-color;
 }
 
 .btn-info[disabled] {
