--- a/web/src/main/resources/META-INF/resources/webjars/common/css/_utkast-header.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/css/_utkast-header.scss
@@ -79,15 +79,16 @@ $header-fix-panel-popover-color: #333;
 }
 
 .utkast-header-person-id {
-
+  //should align with intygstyp h1
   .control-label {
     font-size: 18px;
+    line-height:29px;
   }
 
 }
 
 .utkast-header-relations {
-  min-height:20px;
+  min-height:16px;
 }
 
 .utkast-header-status {
