--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/css/_fk-sit-common.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/css/_fk-sit-common.scss
@@ -17,7 +17,7 @@
  * along with this program.  If not, see <http://www.gnu.org/licenses/>.
  */
 
-/* This file should define style rules that are common to view/edit functionality for all FK SIT certificate types (lisu, luse, lua_fs, luae_na...)
+/* This file should define style rules that are common to view/edit functionality for all FK SIT certificate types (lisjp, luse, lua_fs, luae_na...)
   NOTE: If we in the future can handle client resources from within fk-parent project, this would rather be placed there than in common.
 */
 
