INTYG-3124: Koppla validateringsregler till fält i ts-bas

--- a/web/src/main/resources/META-INF/resources/webjars/common/css/_common.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/css/_common.scss
@@ -693,6 +693,11 @@ input.ng-invalid-date {
     margin-bottom: 0;
 }
 
+TD .validation {
+    margin-top: 0;
+    margin-bottom: 10px;
+}
+
 .formly-field {
     &:not(:nth-last-child(2)) {
         padding-bottom: 15px;
