--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/gui/formly/diagnos.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/gui/formly/diagnos.scss
@@ -11,6 +11,7 @@
   td, th {
     padding-right: 5px;
     padding-bottom: 2px;
+    min-width: 60px;
   }
   .diagnosDescriptionColumn {
     width:450px;
