INTYG-3164: FMB-rutor är inte längre del av print.css.

--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/css/print.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/css/print.scss
@@ -24,6 +24,11 @@ $font-2: 'sans-serif';
 
 
 @media print {
+
+  .webcert-multicol-container {
+    margin-top: 20px !important;
+  }
+
   %radio-checkbox-common {
     display: inline-block;
     float: none;
