--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/fmb/_fmb.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/fmb/_fmb.scss
@@ -17,7 +17,6 @@
  * along with this program.  If not, see <http://www.gnu.org/licenses/>.
  */
 
-
 /* A panel to be used instead of the regular bootstrap panels, panel-default etc.
  * Specifically targeting the FMB-accordion
  */
@@ -52,45 +51,83 @@ $fmb-glyphicon-hover-color: #808080;
   .panel-fmb-info {
     .panel-body {
       max-height: 400px;
-
     }
   }
 }
 
 .fmb-column {
-  padding-right: 65px;
+  padding-right: 50px;
 }
 
 .btn-fmb {
   position: absolute;
-  right: 0;
+  right: -15px;
   top: 0;
   padding: 5px 5px;
   font-size: 12px;
   line-height: 12px;
 }
 
-.btn-default.btn-fmb:hover,.btn-default.btn-fmb:focus  {
+.btn-default.btn-fmb:hover, .btn-default.btn-fmb:focus {
   color: #333;
   background-color: #f5f5f5;
   border-color: #adadad;
 }
 
+.fmb {
+  position: relative;
+}
+
 .panel-wrapper-fmb {
-  position:relative;
+  left: 105%;
+  top: -4px;
+  position: absolute;
+}
+
+.panel-arrow {
+  position: absolute;
+  right: -1px;
+  top: 7px;
+  opacity: 1;
+  z-index: 101;
+
+  &.fmb-collapse {
+    display: none;
+    /*opacity: 0;*/
+  }
+
+  &:after, &:before {
+    position: absolute;
+    display: inline-block;
+    content: '';
+  }
+
+  &:before {
+    border-top: 11px solid transparent;
+    border-right: 11px solid $fmb-border-color;
+    border-bottom: 11px solid transparent;
+    left: -11px;
+    top: 0px;
+  }
+
+  &:after {
+    border-top: 10px solid transparent;
+    border-right: 10px solid #fff;
+    border-bottom: 10px solid transparent;
+    left: -10px;
+    top: 1px;
+  }
 }
 
 .panel-fmb-info {
+  position: absolute;
   border-color: $fmb-border-color;
-
   transition-property: width;
   transition-duration: 0.4s;
-  position: absolute;
-  left: 100%;
   width: 620px;
   overflow: hidden;
   z-index: 100;
-
+  box-shadow: 0px 0px 14px rgba(0, 0, 0, .25);
 
   .panel-body {
     width: 615px;
@@ -121,6 +158,7 @@ $fmb-glyphicon-hover-color: #808080;
       padding-top: 0;
     }
   }
+
   > .panel-footer + .panel-collapse .panel-body {
     border-bottom-color: $fmb-border-color;
     padding-top: 0;
@@ -134,7 +172,7 @@ $fmb-glyphicon-hover-color: #808080;
   }
 
   .fmb-panel-title {
-    margin: 8px 20px 0px 0px;
+    margin: 0px 20px 0px 0px;
     width: 520px;
   }
 
