INTYG-3030: Fix utseende minimeraknapp FMB.

--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/fmb/_fmb.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/fmb/_fmb.scss
@@ -180,7 +180,8 @@ $fmb-glyphicon-hover-color: #808080;
     right: 0;
     border: none;
     line-height: 13px;
-    padding: 17px 20px;
+    padding: 10px 12px;
+    border-radius: 0 4px 0 4px;
   }
 }
 
