--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/fmb/_fmb.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/fmb/_fmb.scss
@@ -129,7 +129,7 @@ $fmb-glyphicon-hover-color: #808080;
   position: absolute;
   border-color: $fmb-border-color;
   width: 620px;
-  overflow: hidden;
+  /*overflow: hidden;*/
   z-index: 100;
   box-shadow: 0px 0px 14px rgba(0, 0, 0, .25);
 
