--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/fmb/_fmb.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/fmb/_fmb.scss
@@ -24,7 +24,7 @@ $fmb-border-color: #ccc;
 $fmb-panelheading-color: #333333;
 $fmb-panelheading-background-color: #fff;
 $fmb-panelheading-background-hover-color: #E0FFFF;
-$fmb-panelheading-border-color: #fff;
+$fmb-panelheading-border-color: #ccc;
 $fmb-panelcollapse-border-color: #fff;
 $fmb-panelfooter-color: #999;
 $fmb-diagnosis-color: #000;
@@ -125,6 +125,30 @@ $fmb-glyphicon-hover-color: #808080;
   }
 }
 
+.fmb-panel-tabset {
+  margin-top: -40px;
+
+  > ul {
+    border-bottom: none;
+  }
+
+  .nav-tabs > li > a {
+    margin-right: 2px;
+    line-height: 1.42857143;
+    border: 1px solid transparent;
+    border-radius: 4px 4px 0 0;
+    background-color: #e5e5e5;
+  }
+
+  .nav-tabs > li.active > a, .nav-tabs > li.active > a:hover, .nav-tabs > li.active > a:focus {
+    color: #555;
+    cursor: default;
+    background-color: #fff;
+    border: 1px solid #ddd;
+    border-bottom-color: transparent;
+  }
+}
+
 .panel-fmb-info {
   position: absolute;
   border-color: $fmb-border-color;
@@ -142,8 +166,12 @@ $fmb-glyphicon-hover-color: #808080;
     overflow-y: auto;
   }
 
-  > .panel-heading {
+  .panel-fmb-info-heading {
+    padding: 9px 0 8px 15px;
+    border-bottom: 1px solid #ccc;
+  }
 
+  > .panel-heading {
     transition-property: background-color;
     transition-duration: 0.4s;
     background-color: $fmb-panelheading-background-color;
@@ -162,7 +190,7 @@ $fmb-glyphicon-hover-color: #808080;
     padding-top: 0;
   }
 
-  > .panel-footer--fmb {
+  .panel-footer--fmb {
     background-color: $fmb-panelheading-background-color;
     text-align: center;
     color: $fmb-panelfooter-color;
@@ -172,6 +200,10 @@ $fmb-glyphicon-hover-color: #808080;
   .fmb-panel-title {
     margin: 0px 20px 0px 0px;
     width: 520px;
+
+    > h4 {
+      padding: 0;
+    }
   }
 
   .fmb-collapse-icon {
