--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/css/inera-webcert.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/css/inera-webcert.scss
@@ -31,6 +31,7 @@
   @import '../fmb/fmb';
   @import '../gui/formly/diagnos';
   @import '../gui/formly/underlag';
+  @import '../gui/formly/sjukskrivningar';
   @import 'komplettering-dialog';
   @import '../gui/wcIntegrationEnhetSelector/wcIntegrationEnhetSelector.directive';
 
