--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/fmb/_fmb.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/fmb/_fmb.scss
@@ -164,8 +164,8 @@ $fmb-glyphicon-hover-color: #808080;
   .panel-body {
     width: 615px;
     max-height: 334px;
-    margin-top: 15px;
-    padding: 0 15px;
+    margin-top: 0;
+    padding: 15 15px;
     overflow-x: hidden;
     overflow-y: auto;
   }
