INTYG-3136: hantering av multipla kompletteringsbegäran

--- a/web/src/main/resources/META-INF/resources/webjars/common/css/_common.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/css/_common.scss
@@ -545,7 +545,7 @@ label.big-radio-label, label.big-checkbox-label {
     padding-top: 2px;
 }
 */
-/* Only used in wcField.directive.html */
+/* Only used in wcField.directive.html and wcIntygField.directive.html */
 
 .edit-form {
     .categorykmplt, .groupkomplettering {
