INTYG-3285: Snyggade till position och innehåll på prognosselecten.

--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/css/inera-webcert.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/css/inera-webcert.scss
@@ -30,6 +30,7 @@
   @import '../fk/arenden/_arende';
   @import '../fmb/fmb';
   @import '../gui/formly/diagnos';
+  @import '../gui/formly/prognos';
   @import '../gui/formly/underlag';
   @import '../gui/formly/sjukskrivningar';
   @import 'komplettering-dialog';
