--- a/web/src/main/resources/META-INF/resources/webjars/common/css/_common.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/css/_common.scss
@@ -751,3 +751,36 @@ TD .validation {
         padding-bottom: 0;
     }
 }
+
+@media (min-width: 992px) {
+    .col-md-pull-right {
+        float: right;
+    }
+}
+
+@media (min-width: 1200px) {
+    .col-lg-auto {
+        width: auto;
+    }
+    .col-lg-pull-right {
+        float: right;
+    }
+    .col-lg-pull-none {
+        float: none !important;
+    }
+    .col-lg-no-padding-right {
+        padding-right: 0;
+    }
+}
+
+@media (min-width: 1340px) {
+    .col-vlg-auto {
+        width: auto;
+    }
+    .col-vlg-pull-right {
+        float: right;
+    }
+    .invisible-vlg {
+        display: none !important;
+    }
+}
