--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/gui/formly/prognos.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/gui/formly/prognos.scss
@@ -23,4 +23,8 @@
   .ui-select-match {
     display: inline-block;
   }
+
+  .ui-select-bootstrap > .ui-select-choices, .ui-select-bootstrap > .ui-select-no-choice {
+    width: auto;
+  }
 }
